<resources>
    <string name="app_name">BerAgenda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="home_nav_header_desc">User</string>
    <string name="home_nav_header_title">E-mail@email.com</string>
    <string name="home_nav_header_subtitle">Additional Info</string>
    <string name="resend_forgot_password_instruction">Please check your inbox dan click in the received link to reset a password</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="go">Go</string>
    <string name="darkmode">Dark Mode</string>
    <string name="boards">Boards</string>
    <string name="search">Search</string>
    <string name="boards_name" translatable="false">Test Board</string>
    <string name="test_card_content" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra sit dignissim in adipiscing a id ultricies turpis.</string>
    <string name="task_management">Task Management</string>
    <string name="enter_done">Change enter key to done</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="background">Background</string>
    <string name="application_logo">Application Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="edit_card">Edit Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="forward_arrow_card">Forward arrow card</string>
    <string name="back_arrow_card">Back arrow card</string>
    <string name="add_board">Add Board</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="board_image">Board Image</string>
    <string name="colors">Colors</string>
    <string name="content">Content</string>
    <string name="content_inside">What\'s the content inside this board?</string>
    <string name="image_to_use">Image to use</string>
    <string name="enter_a_title">Enter a title</string>
    <string name="add_card">Add Card</string>
    <string name="edit_board">Edit Board</string>
    <string name="delete_all_card">Delete All Card</string>
    <string name="members">Members</string>
    <string name="content_required">Card content is required!</string>
    <string name="board_title_required">Board title required!</string>
    <string name="board_title_too_long">Board title is too long!</string>
    <string name="logout_dialog">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="logout_success">Logout success</string>
    <string name="no">No</string>
    <string name="colorPickerButton">Color Picker Button</string>
    <string name="username">Username</string>
    <string name="email">username@email.com</string>

</resources>