<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/yellow_green">

        <TextView
            android:id="@+id/tvCardDoingContext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_card_content"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/btnEditDoingCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_card"
            android:layout_below="@id/tvCardDoingContext"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:id="@+id/btnDeleteDoingCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete_card"
            android:layout_below="@id/tvCardDoingContext"
            android:layout_toEndOf="@id/btnEditDoingCard"/>

        <ImageView
            android:id="@+id/btnForwardDoingCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_arrow_forward"
            android:contentDescription="@string/forward_arrow_card"
            android:layout_below="@id/tvCardDoingContext"
            android:layout_alignParentEnd="true"/>

        <ImageView
            android:id="@+id/btnBackDoingCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_arrow_card"
            android:layout_below="@id/tvCardDoingContext"
            android:layout_toStartOf="@id/btnForwardDoingCard"/>

    </RelativeLayout>
    
</androidx.cardview.widget.CardView>