<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/yellow_green">

        <TextView
            android:id="@+id/tvCardTodoContext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_card_content"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/btnEditTodoCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_card"
            android:layout_below="@id/tvCardTodoContext"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:id="@+id/btnDeleteTodoCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete_card"
            android:layout_below="@id/tvCardTodoContext"
            android:layout_toEndOf="@id/btnEditTodoCard"/>

        <ImageView
            android:id="@+id/btnForwardTodoCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_arrow_forward"
            android:contentDescription="@string/forward_arrow_card"
            android:layout_below="@id/tvCardTodoContext"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>